--- a/style.scss
+++ b/style.scss
@@ -183,19 +183,22 @@ html {
     gap: 20px;
 
     .card {
+position: relative;
+        // &:hover {
+        //     opacity: 0.1;
 
-        &:hover {
-            opacity: 0.1;
-
-        }
+        // }
 
         img {
             width: 100%;
             height: 351px;  
             object-fit: cover;
+            &:hover {
+              opacity: 0.1;
+  
+          }
         }
     }
-
 }
 
 .sliderLatest, .sliderResult {
@@ -205,6 +208,7 @@ html {
 
 .sliderGenre {
     text-align: center;
+    margin-bottom: 50px;
 
     h3 {
       margin-bottom: 50px;
@@ -217,18 +221,17 @@ html {
         align-items: center;
         gap: 75px;
 
-        li:hover {
-          background-color: #CC0000;
-          padding: 5px;
-          border-radius: 8px;
-          cursor: pointer;
+        li {
+          padding: 3px;
 
-          &:active {
-          background-color: #CC0000;
-          padding: 5px;
-          border-radius: 8px;
+          &:hover {
+            background-color: #CC0000;
+            border-radius: 8px;
+            cursor: pointer;
+  
           }
         }
+
     }
 
     hr {
@@ -237,6 +240,80 @@ html {
       margin-top: 20px;
     }
 }
-  
-  
-  
+
+.infos {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  z-index: 999;
+  left: 0%;
+  top: 0%;
+
+  h2 {
+    font-family: Inter;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 24.2px;
+  text-align: center;
+
+  }
+
+  .year {
+    color: #B0B0B0;
+    font-weight: 700;
+    font-family: Inter;
+    font-size: 20px;
+    line-height: 24.2px;
+    text-align: center;
+
+
+  }
+
+  .genre {
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 16.94px;
+    text-align: center;
+
+  }
+
+    i {
+      color: #CC0000;
+      font-size: xx-large;
+    }
+
+    .note {
+      color: #CC0000;
+      font-family: Inter;
+      font-size: 32px;
+      font-weight: 700;
+      line-height: 38.73px;
+      text-align: center;
+
+  }
+}
+
+
+// --------------------------------------------
+.overlay{
+  position: fixed;
+  top: 0;
+  right: 0;
+  background: #000000a4;
+  width: 100vw;
+  height: 100vh;
+  z-index: 2;
+}
+
+.hidden {
+  visibility: hidden;
+}
+
+.visible {
+  visibility: visible;
+}
